--- a/.gitignore
+++ b/.gitignore
@@ -153,4 +153,10 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# VSCode
+.vscode
+
+# Build
+_build
+
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
